--- a/hadoop-customwrapper/pom.xml
+++ b/hadoop-customwrapper/pom.xml
@@ -6,39 +6,59 @@
     <!-- *************************** -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.devkit.hadoop</groupId>
-    <artifactId>hadoop-customwrapper</artifactId>
+    <artifactId>denodo-hadoop-wrapper</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>hadoop-customwrapper</name>
+    <name>denodo-hadoop-wrapper</name>
 
+  <properties>
+    <hadoop.version>2.0.0-cdh4.0.0</hadoop.version>
+  </properties>
+  <repositories>
+  	<repository>
+  		<id>cloudera</id>
+  		<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+  	</repository>
+  </repositories>
+  
+  
+  <profiles>
+  	<profile>
+  		<id>denodo-ac</id>
+  		<build>
+                <resources>
+                    <!-- ========================================================== -->
+                    <!-- Configuration (src/main/conf/denodo-ac) -->
+                    <!-- ========================================================== -->
+                    <resource>
+                        <directory>src/main/conf/denodo-ac</directory>
+                    </resource>
+                </resources>
+            </build>
+  	</profile>
+  </profiles>
+  
     <!-- *************************** -->
     <!-- BUILD INFO -->
     <!-- *************************** -->
     <build>
         <resources>
-              <!-- ========================================= -->
-              <!-- "Non-java" resources (src/main/resources) -->
-              <!--  * Mainly Spring-related XML files -->
-              <!-- ========================================= -->
-              <resource>
-                  <directory>src/main/resources</directory>
-                  <excludes>
-        			<exclude>my-jar-with-dependencies.xml</exclude>
-      			  </excludes>                   
-              </resource>
+             <resource>
+                <directory>.</directory>
+                <targetPath>META-INF</targetPath>
+                <includes>
+                    <include>LICENSE.txt</include>
+                    <include>NOTICE.txt</include>
+                </includes>
+            </resource>
               
-              <!-- ========================================================= -->
-              <!-- "Java" resources (disperse through the package structure) -->
-              <!--  * ".properties": plugins, i18n and other uses -->
-              <!--  * ".xml": Hibernate mappings and other uses -->
-              <!-- ========================================================= -->
-              <resource>
-                  <directory>src/main/java</directory>
-                  <includes>
-                     <include>**/*.properties</include>
-                     <include>**/*.xml</include>
-                  </includes>
-              </resource>              
+            <resource>
+               <directory>src/main/java</directory>
+               <includes>
+                   <include>**/*.properties</include>
+                   <include>**/*.xml</include>
+               </includes>
+            </resource>
         </resources>
                 
         <!-- ============================================================== -->
@@ -70,115 +90,67 @@
                 </configuration>
             </plugin>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.5</version>
                 <configuration>
-                  <descriptors>
-                     <descriptor>src/main/resources/my-jar-with-dependencies.xml</descriptor>            
-                  </descriptors>
+                    <encoding>US-ASCII</encoding>
                 </configuration>
-                
+            </plugin>
+      
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.1.2</version>
                 <executions>
                     <execution>
-                    	<id>make-assembly</id>                    
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2-beta-5</version>
+                <executions>
+                    <execution>
+                        <id>make-assembly-jar-with-dependencies</id>
                         <phase>package</phase>
                         <goals>
                             <goal>attached</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>clean</phase>
                         <configuration>
-                            <tasks>
-                                <delete>
-                                    <fileset dir="." includes="**/deleteme.txt" />
-		                        </delete>
-                                <delete dir="target" />
-                            </tasks>
+                            <descriptors>
+                                <descriptor>${basedir}/src/assembly/jar-with-dependencies.xml</descriptor>
+                            </descriptors>
+                            <appendAssemblyId>true</appendAssemblyId>
+                            <finalName>denodo-hadoop-wrapper-${project.version}</finalName>
                         </configuration>
+                    </execution>
+                    <execution>
+                        <id>make-assembly-dist</id>
+                        <phase>package</phase>
                         <goals>
-                            <goal>run</goal>
+                            <goal>attached</goal>
                         </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>${basedir}/src/assembly/dist.xml</descriptor>
+                            </descriptors>
+                            <appendAssemblyId>true</appendAssemblyId>
+                            <finalName>denodo-hadoop-wrapper-${project.version}</finalName>
+                        </configuration>
                     </execution>
                 </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.antlr</groupId>
-                        <artifactId>antlr</artifactId>
-                        <version>3.0</version>
-                        <scope>compile</scope>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
    
-   <profiles>
-      <!-- development environment A Coruna office -->
-      <profile>
-           <id>denodo-ac</id>
-           <build>
-             <resources>
-                <!-- ========================================================== -->
-                <!-- Configuration (src/main/conf/denodo-ac) -->
-                <!-- ========================================================== -->
-                <resource>
-                  <directory>src/main/conf/denodo-ac</directory>
-                </resource>
-             </resources>
-           </build>
-      </profile>
-      
-      <!-- development environment London office -->
-      <profile>
-            <id>denodo-lo</id>
-            <build>
-              <resources>
-                <!-- ========================================================== -->
-                <!-- Configuration (src/main/conf/denodo-lo)                    -->
-                <!-- ========================================================== -->
-                <resource>
-                    <directory>src/main/conf/denodo-lo</directory>
-                </resource>
-              </resources>
-            </build>
-        </profile>
-        
-        <!-- development environment Madrid office -->        
-        <profile>   
-            <id>denodo-ma</id>
-            <build>
-              <resources>
-                <!-- ========================================================== -->
-                <!-- Configuration (src/main/conf/denodo-ma)                    -->
-                <!-- ========================================================== -->
-                <resource>
-                    <directory>src/main/conf/denodo-ma</directory>
-                </resource>
-              </resources>
-            </build>
-        </profile>
-        
-        <!-- development environment Palo Alto office -->
-        <profile>
-            <id>denodo-pa</id>
-            <build>
-              <resources>
-                <!-- ========================================================== -->
-                <!-- Configuration (src/main/conf/denodo-pa)                    -->
-                <!-- ========================================================== -->
-                <resource>
-                    <directory>src/main/conf/denodo-pa</directory>
-                </resource>
-              </resources>
-            </build>
-        </profile>        
-    </profiles>
+   
 
     <!-- ****************************************************************** -->
     <!-- DEPENDENCIES -->
@@ -195,7 +167,7 @@
         <dependency>
             <groupId>com.denodo.commons</groupId>
             <artifactId>denodo-util</artifactId>
-            <version>2.43</version>
+            <version>2.7.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -207,41 +179,136 @@
         <dependency>
             <groupId>com.denodo.vdp</groupId>
             <artifactId>denodo-vdp-server-base</artifactId>
-            <version>4.7.0_1</version>
+            <version>4.7.1_7</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.denodo.vdp</groupId>
+            <artifactId>denodo-vdp-client-base</artifactId>
+            <version>4.7.1_7</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.denodo.vdp</groupId>
+            <artifactId>denodo-vdp-server-ext</artifactId>
+            <version>4.7.1_7</version>
             <scope>provided</scope>
         </dependency>             
         <!-- ***  -->
-        <dependency>
-	      <groupId>junit</groupId>
-	      <artifactId>junit</artifactId>
-	      <version>3.8.1</version>
-	      <scope>test</scope>
-	    </dependency>
-	    <dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-core</artifactId>
-			<version>0.20.2-cdh3u0</version>
-		</dependency>
+
+	    
 		<dependency>
-	    	<groupId>commons-logging</groupId>
-	    	<artifactId>commons-logging</artifactId>
-	    	<version>1.0.4</version>
-	  	</dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-common</artifactId>
+			<version>${hadoop.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>jetty</artifactId>
+					<groupId>org.mortbay.jetty</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jersey-server</artifactId>
+					<groupId>com.sun.jersey</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jersey-core</artifactId>
+					<groupId>com.sun.jersey</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jersey-json</artifactId>
+					<groupId>com.sun.jersey</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jasper-compiler</artifactId>
+					<groupId>tomcat</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jasper-runtime</artifactId>
+					<groupId>tomcat</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jetty-util</artifactId>
+					<groupId>org.mortbay.jetty</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jsp-api</artifactId>
+					<groupId>javax.servlet.jsp</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>servlet-api</artifactId>
+					<groupId>javax.servlet</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>kfs</artifactId>
+					<groupId>net.sf.kosmosfs</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>core</artifactId>
+					<groupId>org.eclipse.jdt</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>commons-el</artifactId>
+					<groupId>commons-el</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>commons-httpclient</artifactId>
+					<groupId>commons-httpclient</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jackson-mapper-asl</artifactId>
+					<groupId>org.codehaus.jackson</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jets3t</artifactId>
+					<groupId>net.java.dev.jets3t</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>zookeeper</artifactId>
+					<groupId>org.apache.zookeeper</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>snappy-java</artifactId>
+					<groupId>org.xerial.snappy</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>commons-math</artifactId>
+					<groupId>org.apache.commons</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>protobuf-java</artifactId>
+					<groupId>com.google.protobuf</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-hdfs</artifactId>
+			<version>${hadoop.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>zookeeper</artifactId>
+					<groupId>org.apache.zookeeper</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
 	  	<dependency>
 	    	<groupId>commons-lang</groupId>
 	    	<artifactId>commons-lang</artifactId>
-	    	<version>2.4</version>
+	    	<version>2.6</version>
 	  	</dependency>
+	  	
 	  	<dependency>
-	  		<groupId>org.codehaus.jackson</groupId>
-	  		<artifactId>jackson-mapper-asl</artifactId>
-	  		<version>1.5.2</version>
-		</dependency> 
-	  	<dependency>
-	  		<groupId>com.denodo.devkit.hadoop</groupId>
-	  		<artifactId>hadoop-first-example</artifactId>
-	  		<version>1.0-SNAPSHOT</version>
-		</dependency>	         
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.48</version>
+		</dependency>
+	  	
     </dependencies>
     
 
