--- a/hadoop-customwrapper/pom.xml
+++ b/hadoop-customwrapper/pom.xml
@@ -297,6 +297,12 @@
 			</exclusions>
 		</dependency>
 		
+		<dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-client-core</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
+            
 	  	<dependency>
 	    	<groupId>commons-lang</groupId>
 	    	<artifactId>commons-lang</artifactId>
