--- a/hdfs-customwrapper/pom.xml
+++ b/hdfs-customwrapper/pom.xml
@@ -6,7 +6,7 @@
     <!-- BASIC PROJECT INFO -->
     <!-- *************************** -->
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.denodo.devkit.hdfs.customwrapper</groupId>
+    <groupId>com.denodo.connect.hdfs.customwrapper</groupId>
     <artifactId>hdfs-customwrapper</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
