--- a/hdfs-customwrapper/pom.xml
+++ b/hdfs-customwrapper/pom.xml
@@ -7,10 +7,10 @@
     <!-- *************************** -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
-    <artifactId>hdfs-customwrapper</artifactId>
+    <artifactId>denodo-hdfs-customwrapper</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>hdfs-customwrapper</name>
+    <name>denodo-hdfs-customwrapper</name>
 
     <properties>
         <!-- For CDH3u4 -->
@@ -124,7 +124,7 @@
                                 <descriptor>${basedir}/src/assembly/jar-with-dependencies.xml</descriptor>
                             </descriptors>
                             <appendAssemblyId>true</appendAssemblyId>
-                            <finalName>hdfs-customwrapper-${project.version}</finalName>
+                            <finalName>denodo-hdfs-customwrapper-${project.version}</finalName>
                         </configuration>
                     </execution>
                     <execution>
