--- a/hdfs/hdfs-customwrapper/pom.xml
+++ b/hdfs/hdfs-customwrapper/pom.xml
@@ -8,14 +8,15 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hdfs-customwrapper</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>denodo-hdfs-customwrapper</name>
 
     <properties>
         <!-- For CDH3u4 -->
-        <hadoop.version>0.20.2-cdh3u4</hadoop.version>
-        <avro.version>1.4.1</avro.version>
+        <!-- <hadoop.version>0.20.2-cdh3u4</hadoop.version> -->
+        <hadoop.version>1.1.1</hadoop.version>
+        <avro.version>1.7.2</avro.version>
     </properties>
     <repositories>
         <repository>
@@ -186,6 +187,17 @@
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
+            <version>${avro.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro-mapred</artifactId>
             <version>${avro.version}</version>
             <exclusions>
                 <exclusion>
