--- a/hdfs/hdfs-customwrapper/src/main/conf/denodo-ma/log4j.properties
+++ b/hdfs/hdfs-customwrapper/src/main/conf/denodo-ma/log4j.properties
@@ -18,4 +18,4 @@ log4j.appender.stdout.layout.ConversionPattern=%d %5p [%c{1}] (%F:%L) - %m%n
 # Log level for this application's own classes.
 # Set to WARN in pre-production and production environments.
 #
-log4j.logger.com.denodo.connect.hdfs=DEBUG
+log4j.logger.com.denodo.connect.hadoop=DEBUG
