--- a/hdfs/hdfs-customwrapper-5.0/pom.xml
+++ b/hdfs/hdfs-customwrapper-5.0/pom.xml
@@ -7,7 +7,7 @@
     <!-- *************************** -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
-    <artifactId>denodo-hdfs-customwrapper</artifactId>
+    <artifactId>denodo-hdfs-customwrapper-5.0</artifactId>
     <version>20130304</version>
     <packaging>jar</packaging>
     <name>denodo-hdfs-customwrapper</name>
@@ -111,7 +111,7 @@
                                 <descriptor>${basedir}/src/main/assembly/dist.xml</descriptor>
                             </descriptors>
                             <appendAssemblyId>true</appendAssemblyId>
-                            <finalName>hdfs-customwrapper-5.0-${project.version}</finalName>
+                            <finalName>denodo-hdfs-customwrapper-5.0-${project.version}</finalName>
                         </configuration>
                     </execution>
                 </executions>
@@ -139,7 +139,7 @@
             <version>2.72</version>
             <scope>provided</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>com.denodo.vdp</groupId>
             <artifactId>denodo-vdp-server-base</artifactId>
@@ -160,7 +160,7 @@
                 <exclusion>
                     <groupId>org.jboss.netty</groupId>
                     <artifactId>netty</artifactId>
-                </exclusion>                
+                </exclusion>
                 <exclusion>
                     <groupId>org.mortbay.jetty</groupId>
                     <artifactId>jetty</artifactId>
@@ -179,7 +179,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
+
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro-mapred</artifactId>
@@ -192,7 +192,7 @@
                 <exclusion>
                     <groupId>org.jboss.netty</groupId>
                     <artifactId>netty</artifactId>
-                </exclusion>                
+                </exclusion>
                 <exclusion>
                     <groupId>org.mortbay.jetty</groupId>
                     <artifactId>jetty</artifactId>
@@ -211,7 +211,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
+
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
@@ -232,7 +232,7 @@
                 <exclusion>
                     <groupId>org.apache.commons</groupId>
                     <artifactId>commons-math</artifactId>
-                </exclusion>                                
+                </exclusion>
                 <exclusion>
                     <groupId>tomcat</groupId>
                     <artifactId>jasper-compiler</artifactId>
@@ -279,7 +279,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
+
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
