--- a/hdfs/hdfs-customwrapper-5.0/pom.xml
+++ b/hdfs/hdfs-customwrapper-5.0/pom.xml
@@ -285,5 +285,12 @@
             <artifactId>httpclient</artifactId>
             <version>4.2.1</version>
         </dependency>
+        
+        <dependency> 
+            <groupId>com.hadoop.gplcompression</groupId>
+            <artifactId>hadoop-lzo</artifactId>
+            <version>0.4.16</version>
+        </dependency>
+        
     </dependencies>
 </project>
