--- a/hdfs/hdfs-customwrapper-5.0/pom.xml
+++ b/hdfs/hdfs-customwrapper-5.0/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hdfs-customwrapper-5.0</artifactId>
-    <version>20130322</version>
+    <version>20130405</version>
     <packaging>jar</packaging>
     <name>denodo-hdfs-customwrapper</name>
 
@@ -295,7 +295,13 @@
         <dependency>
             <groupId>com.denodo.connect</groupId>
             <artifactId>denodo-hdfs-lib</artifactId>
-            <version>20130322</version>
+            <version>20130405</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.java.dev.jets3t</groupId>
+            <artifactId>jets3t</artifactId>
+            <version>0.7.4</version>
         </dependency>
 
     </dependencies>
