--- a/hdfs/hdfs-lib/pom.xml
+++ b/hdfs/hdfs-lib/pom.xml
@@ -154,6 +154,11 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>net.java.dev.jets3t</groupId>
+            <artifactId>jets3t</artifactId>
+            <version>0.7.4</version>
+        </dependency>
 
     </dependencies>
 </project>
