--- a/hdfs/hdfs-lib/pom.xml
+++ b/hdfs/hdfs-lib/pom.xml
@@ -42,6 +42,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
+                    <!-- org.apache.hadoop.* requires 1.6 -->
                     <source>1.6</source>
                     <target>1.6</target>
                     <encoding>US-ASCII</encoding>
