--- a/hbase/hbase-customwrapper/pom.xml
+++ b/hbase/hbase-customwrapper/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hbase-customwrapper</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>20130604</version>
     <packaging>jar</packaging>
     <name>denodo-hbase-customwrapper</name>
 
